refactored folder structure

--- a/src/SharedModule/NavComponent/nav.template.pug
+++ b/src/SharedModule/NavComponent/nav.template.pug
@@ -4,12 +4,17 @@ header.header
       .col-md-4
         h1 Brand
       .col-md-8
-        ul
-          li
-            a(href="") link 1
-          li
-            a(href="") link 2
-          li
-            a(href="") link 3
-          li
-            a(href="") link 4
+        nav
+          ul
+            li
+              a(href="/#/home") Home
+            li
+              a(href="/#/poop") About
+            li
+              a(href="/#/jizzinmymoney") Faq
+            li
+              a.btn.btn-success Sign in              
+            li
+              a(style="font-size: 42px; font-weight: 100") |
+            li
+              a.btn.btn-primary Sign up
