--- a/src/SharedModule/NavComponent/_nav.styles.sass
+++ b/src/SharedModule/NavComponent/_nav.styles.sass
@@ -2,3 +2,27 @@
   height: 80px
   background: black
   color: white !important
+  position: fixed
+  top: 0
+  width: 100%
+  z-index: 1000
+  overflow: hidden
+  line-height: 80px
+
+  nav
+    ul
+      float: right
+      list-style: none
+      padding: 0
+      margin: 0
+
+      li
+        float: left
+
+        a
+          display: inline-block
+          margin-left: 15px
+          font:
+            size: 16px
+          color: white
+  
